--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- content -->
   <section class="section section-center content">
     <h1>First Example</h1>
-    <h2 class="result">Dummy Text</h2>
+    <h2 class="result">Loading...</h2>
   </section>
 
 
